# systemic-risk-index

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
gen_ai/: app.py  index_construction.py  models.py  summary_gen.py  system_prompt.py
notebooks/: 01-Data-Collection-and-Preprocess.ipynb  02-EDA.ipynb  03-Systemic-Risk-Index-(SRI)-Creation.ipynb  04-Visual-Analysis.ipynb
